--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who is PEACEIN</title>
+    <title>Who is SeungJun</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a9a68f8b3f.js" crossorigin="anonymous"></script>
   </head>
   <main>
