--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             <p>웨보노믹스 인턴(2022.06 ~ 2022.08)</p>
             <ul>
               <li>웹 사이트 유지보수</li>
-            </ul>  
+            </ul>
+            <p>웹사이트 구축</p>
+            <ul>
+              <li><a href="https://www.github.com/gongseung/worldcup">https://www.github.com/gongseung/worldcup</a></li>
+            </ul> 
           </section>
     </article>
   </main>
